--- a/farmastock/src/main/resources/application.properties
+++ b/farmastock/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.profiles.active=dev
-
-
-
+spring.profiles.active=heroku
+spring.banner.location=banner.txt
 #WEB SERVICE
 vs= v1
 ##---------------
